messaging_app/blue_deployment.yaml
# CURRENT LIVE version (v1.0)
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-blue
  labels:
    version: v2.0
spec:
  replicas: 3
  selector:
    matchLabels:
      app: django-app
      version: v2.0
  template:
    metadata:
      labels:
        app: django-app
        version: v2.0
    spec:
      containers:
      - name: django-web
        image: django-messaging-app:v2.0 
        ports:
        - containerPort: 8000
