messaging_app/green_deployment.yaml
# Green Deployment

apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-green
  labels:
    version: v2.0
spec:
  replicas: 3
  selector:
    matchLabels:
      app: django-app
      version: v2.0
  template:
    metadata:
      labels:
        app: django-app
        version: v2.0
    spec:
      containers:
      - name: django-web-v2
        image: django-messaging-app:v2.0 
        ports:
        - containerPort: 8000
