messaging_app/django-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-web-service
spec:
  type: ClusterIP
  selector:
    app: django_web 
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
