messaging_app/kubeservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-app-service 
spec:
  type: ClusterIP
  selector:
    app: django-app
    version: v1.0 # Initial traffic target
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
