messaging_app/mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-db-service 
  labels:
    app: mysql-db-service
spec:
  type: ClusterIP
  selector:
    app: mysql-db
  ports:
  - protocol: TCP
    port: 3306
    targetPort: 3306
